# twitch-lamoda-parser-fastapi

./: .gitignore  Dockerfile  Dockerfile1  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: fastapi_settings.py  kafka_settings.py  mongo_settings.py  redis_settings.py  twich_settings.py  twitch_settings.py
app/core/: lamoda_parser.py  mongo.py  twich_parser.py  twitch_parser.py
app/entrypoints/: entrypoint_consumer.sh  entrypoint_fastapi.sh
app/models/: lamoda.py  twich.py  twitch.py
app/routers/: lamoda.py  twitch.py
app/services/: kafka.py  lamoda_services.py  redis_service.py  twich_services.py
app/utils/: serializer.py  streamers_getter.py
worker/: main.py
worker/config/: fastapi_settings.py  kafka_settings.py  twitch_settings.py
worker/core/: lamoda_parser.py  mongo.py  twitch_parser.py
worker/routers/: lamoda.py  twitch.py
worker/services/: kafka.py
worker/utils/: streamers_getter.py
