[tool.poetry]
name = "twich-lamoda-parser-fastapi"
version = "0.1.0"
description = ""
authors = ["RubiFoc <zhenya20057@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
bs4 = "^0.0.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
asyncio = "^3.4.3"
aioredis = "^2.0.1"
aiokafka = "^0.11.0"
pymongo = "^4.8.0"
typing-extensions = "^4.12.2"
redis = "^5.0.8"
ruff = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
